--- a/Informe/informe.tex
+++ b/Informe/informe.tex
@@ -101,6 +101,14 @@ Recuperado el #6
 \newpage
 \section*{Introducción}
 
+Informe sobre las diferentes implentaciones del Algoritmo Euclidiano.
+
+En la implemetanción se uso la librería GNU MP 6.1.1 en C++.
+
+Para crear los gráficos se crearon dos números al azar a y b, además al número a se le sumo el número $2^n$, donde n es la cantidad de bits a calcular, de esta forma, a siempre cumplia con la contidad de bits que se pedia.
+
+Los gráficos fueron creado usando un script en R.
+
 
 \section{Algoritmo Implementado}
 
@@ -253,7 +261,44 @@ gcd(2123010620889223608977186369097185643295866022\\0448002748878401956193718249
 \newpage
 
 \section{Curvas de desempeño de resultados}
+
+\subsection{Algoritmo 2}
+
+\begin{center}
+	\includegraphics[scale=1]{plot/a2.png}
+\end{center}	
+
 \newpage
+
+
+\subsection{Algoritmo 3}
+
+\begin{center}
+	\includegraphics[scale=1]{plot/a3.png}
+\end{center}	
+
+\newpage
+
+
+\subsection{Algoritmo 4}
+
+\begin{center}
+	\includegraphics[scale=1]{plot/a4.png}
+\end{center}	
+
+\newpage
+
+
+\subsection{Algoritmo 5}
+
+\begin{center}
+	\includegraphics[scale=1]{plot/a5.png}
+\end{center}	
+
+\newpage
+
+
+
 \section{Conclusiones}
 
 \end{document}
