--- a/Informe/informe.tex
+++ b/Informe/informe.tex
@@ -302,7 +302,19 @@ gcd(2123010620889223608977186369097185643295866022\\0448002748878401956193718249
 \section{Conclusiones}
 
 
+Se puede concluir que:
 
+\begin{itemize}
+
+\item El algoritmo 1 es el más ineficiente cuando se trata de calcular el gcd(a,b), tanto así que se dejo ejecuntando por tres días intentando calcular los datos suficientes para crear un gráfico y no se logro.
+
+\item El algoritmo 2 y 3 presentan un comportamiento similar, pero el dos tiene a tener un mayor rango de diferencia entre el promedio y los minimo y máximo.
+
+\item El algoritmo 4 es el más eficiente de todos, los extremos minimo y máximo están cercanos al promedio y es el que tiene menos coste de tiempo.
+
+\item El algoritmo 5, después del 1, es el que tiene mayor coste de tiempo.
+
+\end{itemize}
 
 
 
