trabajo terminado para entregar

--- a/Informe/informe.tex
+++ b/Informe/informe.tex
@@ -32,7 +32,7 @@
 
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\fancyhead[L]{Combinatoria}
+\fancyhead[L]{Algoritmo Euclidiano}
 \fancyhead[C]{Licenciatura en ciencias de la computación}
 \fancyhead[R]{USACH}
 
@@ -109,8 +109,9 @@ Para crear los gráficos se crearon dos números al azar a y b, además al núme
 
 Los gráficos fueron creado usando un script en R.
 
+\newpage
 
-\section{Algoritmo Implementado}
+\section{Formulación experimentos}
 
 A continuación se mostrará que tan eficientes fueron los distintos tipos de algoritmos.
 
@@ -129,7 +130,7 @@ gcd(16534528044,8332745927) - 0.0008580 segundos
 \\
 gcd(43263441545690516,43312793054108111) - 0.0068580 segundos
 
-
+\newpage
 \subsection{Algoritmo Euclidiano}
 
 Este algoritmo resultó ser la mejor opción en cuanto a complejidad y eficiencia ya que no demostró una lógica muy complicada ni un tiempo de espera demasiado alto, aunque no halla sido de los que menos tiempo de ejecución requirió.
@@ -153,7 +154,7 @@ gcd(2123010620889223608977186369097185643295866022\\0448002748878401956193718249
 68185362149486650485123987197513787717187652289362\\47143232679847194284772046122091468887714) - 0.0002170 segundos
 
 
-\newpage
+
 
 \subsection{Algoritmo Euclidiano Binario}
 
@@ -198,7 +199,7 @@ gcd(23356764234689876532233456788876543234567,\\
 gcd(2123010620889223608977186369097185643295866022\\04480027488784019561937182491149755503041950,\\
 68185362149486650485123987197513787717187652289362\\47143232679847194284772046122091468887714) - 0.0001410 segundos
 
-\newpage
+
 \subsection{Algoritmo Euclidiano Extendido Binario}
 
 Pese que con números de pocas unidades el programa tiene un tiempo de ejecución a la par con el resto de algoritmos, cuando se utilizan números con muchas cifras ( > 10 ) ya el tiempo de espera se dispara quedando bastante atrás con respecto a sus otras opciones.
@@ -221,7 +222,7 @@ gcd(2123010620889223608977186369097185643295866022\\0448002748878401956193718249
 68185362149486650485123987197513787717187652289362\\47143232679847194284772046122091468887714) - 0.0004830 segundos
 
 \newpage
-\section{Formulación experimentos}
+
 
 \section{Información de Hardware y Software}
 
